fix issues with textareas being larger than the screen on mobile devices

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,8 +5,11 @@ html, body, #root, .body{
   left: 0;
   background-color: #EEEEEE;
 }
-input{
+input, textarea{
   border: 1px solid black;
+}
+textarea{
+  width: 100%;
 }
 .verti-center{
   height: 80px;
@@ -171,6 +174,11 @@ input{
 .manual-link-style:hover{
   text-decoration: underline;
   color: #0056b3;
+}
+@media (min-width: 450px) {
+  textarea{
+    width: auto;
+  }
 }
 @media (min-width: 680px) {
   .homepage-settings-section{
